--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #c8283d; }
+  background: #26c633; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #576c74; }
+  background: #184f2a; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #cf9d24; }
+  background: #32da2f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #9766a4; }
+  background: #afb0c2; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7a1bdf; }
+  background: #751d0d; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #72a8ea; }
+  background: #885879; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #84abf5; }
+  background: #2df267; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #d16d7f; }
+  background: #bc99d0; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f254af; }
+  background: #aa78d8; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #3b0507; }
+  background: #74d5e5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d312e8; }
+  background: #bb497e; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #bcfa2c; }
+  background: #f60a27; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #b1e403; }
+  background: #c8b4c5; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #8f2b0c; }
+  background: #582216; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #f94d93; }
+  background: #ce2f1a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #29ed8b; }
+  background: #cd4424; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5538e7; }
+  background: #2c977b; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #8f3f2d; }
+  background: #61ccef; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ca1fdd; }
+  background: #7c4070; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f92257; }
+  background: #9adf46; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #b10f22; }
+  background: #cfb672; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #166e22; }
+  background: #6e9d8a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #d8fa0e; }
+  background: #21f6fb; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #60a5d5; }
+  background: #9b5f28; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a04d94; }
+  background: #895345; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #afbcaf; }
+  background: #92d716; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #c389ae; }
+  background: #a5f701; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5df320; }
+  background: #8d1ffb; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #3ec394; }
+  background: #4a493d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #d7490f; }
+  background: #d0988a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #54c1e2; }
+  background: #4f0749; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #c08627; }
+  background: #ee6d34; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #a0cfa1; }
+  background: #051980; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #2f1354; }
+  background: #c61314; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #6b41e6; }
+  background: #01adfc; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f91383; }
+  background: #5c37c0; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #5a2828; }
+  background: #96d0b0; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ed85a0; }
+  background: #c66d50; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #15d0c3; }
+  background: #ee2ea4; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #985477; }
+  background: #e0410c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #6fb6d3; }
+  background: #221ce0; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e72f47; }
+  background: #4aee7a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #bd8f7f; }
+  background: #c996f5; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #edf836; }
+  background: #7ae138; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #bae6b7; }
+  background: #684aef; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #806895; }
+  background: #501972; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #fdfbfb; }
+  background: #046b1c; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #b31786; }
+  background: #8a166f; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #0adda7; }
+  background: #d515ba; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #f17c1b; }
+  background: #cba252; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #9a128e; }
+  background: #23d569; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #98b435; }
+  background: #dc0a0e; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #4a3bb5; }
+  background: #da2c4a; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #d97cb1; }
+  background: #5c9ce5; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #76b37b; }
+  background: #8307bb; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #bb9af3; }
+  background: #191452; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c6c930; }
+  background: #9b079d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #019b8a; }
+  background: #7ab28a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #ad7904; }
+  background: #5f6a3f; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #87a38c; }
+  background: #b2d270; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #c48f3c; }
+  background: #e1c8d9; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #7930ca; }
+  background: #e2108d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #6dbab3; }
+  background: #055665; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3595d4; }
+  background: #e55297; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #d86d72; }
+  background: #090a3c; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #b1e2dd; }
+  background: #c8f41b; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1ce664; }
+  background: #57c64c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b9e2a2; }
+  background: #5cd69b; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #943bb8; }
+  background: #4894d6; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #e256c6; }
+  background: #4c97a0; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #7ca257; }
+  background: #e3be17; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ef6659; }
+  background: #38c80a; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #813c65; }
+  background: #43301d; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #fb0b5a; }
+  background: #f09aef; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #99bf36; }
+  background: #441a14; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #505561; }
+  background: #2217f0; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #ea704c; }
+  background: #7617f7; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #0d9ef7; }
+  background: #72e5d8; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #0b2859; }
+  background: #e3e1f2; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #1efd11; }
+  background: #851657; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #99d196; }
+  background: #dd4a46; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #4291a3; }
+  background: #ad4a8b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #408c72; }
+  background: #3d7fa9; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #47a1e4; }
+  background: #60a1fb; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #525886; }
+  background: #a078c2; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #40683c; }
+  background: #88f54d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ee0e5e; }
+  background: #2f9f88; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #3af917; }
+  background: #d762e5; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #8b9f3f; }
+  background: #0ab1fc; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #de61ce; }
+  background: #79f132; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #f68a3b; }
+  background: #2ff6a0; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #e6fcd8; }
+  background: #27c12e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #b7d00d; }
+  background: #01577c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #333d40; }
+  background: #442796; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #63a97d; }
+  background: #a6adb4; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #b4cb86; }
+  background: #1360ec; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #039724; }
+  background: #781c9d; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ab05f9; }
+  background: #b9808e; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #42e549; }
+  background: #b2bdd8; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #9b743c; }
+  background: #d82e16; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16910,9 +16910,6 @@ input:not(:checked) + .slider-switch > .switch-non {
   align-items: center;
   width: 100%; }
 
-.guide-img-border-div img {
-  width: 100%; }
-
 .guide-img-border-div .img-hieght-half {
   height: 50vh; }
 
@@ -16994,6 +16991,87 @@ input:not(:checked) + .slider-switch > .switch-non {
   border-radius: 50%;
   width: 50px; }
 
+/*popup css*/
+/* Style the Image Used to Trigger the Modal */
+#myImg, #myImg2, #myImg3, #myImg4, #myImg5, #myImg6, #myImg7, #myImg8, #myImg9, #myImg10, #myImg11, #myImg12 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s; }
+
+#myImg:hover, #myImg2:hover, #myImg3:hover, #myImg4:hover, #myImg5:hover, #myImg6:hover, #myImg7:hover, #myImg8:hover, #myImg9:hover, #myImg10:hover, #myImg11:hover, #myImg12:hover {
+  opacity: 0.7; }
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9);
+  /* Black w/ opacity */ }
+
+/* Modal Content (Image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: auto;
+  max-width: auto; }
+
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px; }
+
+/* Add Animation - Zoom in the Modal */
+.modal-content, #caption {
+  animation-name: zoom;
+  animation-duration: 0.6s; }
+
+@keyframes zoom {
+  from {
+    transform: scale(0); }
+  to {
+    transform: scale(1); } }
+/* The Close Button */
+.close, .close2, .close3, .close4, .close5, .close6, .close7, .close8, .close9, .close10, .close11, .close12 {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s; }
+
+.close:hover, .close2:hover, .close3:hover, .close4:hover, .close5:hover, .close6:hover, .close7:hover, .close8:hover, .close9:hover, .close10:hover, .close11:hover, .close12:hover
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer; }
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px) {
+  .modal-content {
+    width: 100%; } }
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
     grid-template-columns: 1fr; }
@@ -17457,6 +17535,15 @@ input:not(:checked) + .slider-switch > .switch-non {
 
   .guide-img-border-div {
     padding: 10px; }
+
+  .guide-img-border-div img {
+    width: 100%; }
+
+  .main {
+    grid-template-columns: 1fr; }
+
+  .main #left {
+    display: none; }
 
   .guide-img-border-div img, .guide-img-border-div .img-hieght-half {
     height: 100%; } }
