--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #26c633; }
+  background: #8c6315; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #184f2a; }
+  background: #7c2bec; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #32da2f; }
+  background: #0fce20; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #afb0c2; }
+  background: #43808a; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #751d0d; }
+  background: #f1b41d; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #885879; }
+  background: #ba3f44; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #2df267; }
+  background: #9448e2; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #bc99d0; }
+  background: #ba0591; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #aa78d8; }
+  background: #03eb5c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #74d5e5; }
+  background: #c84f30; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #bb497e; }
+  background: #21d2bc; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #f60a27; }
+  background: #4756e3; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c8b4c5; }
+  background: #d61b03; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #582216; }
+  background: #963d7a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ce2f1a; }
+  background: #41c6ce; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #cd4424; }
+  background: #6ebee5; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #2c977b; }
+  background: #793483; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #61ccef; }
+  background: #37ae30; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #7c4070; }
+  background: #a01caf; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #9adf46; }
+  background: #7027c1; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #cfb672; }
+  background: #2969a6; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #6e9d8a; }
+  background: #02f039; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #21f6fb; }
+  background: #a17bd9; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #9b5f28; }
+  background: #da45ef; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #895345; }
+  background: #924202; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #92d716; }
+  background: #898182; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a5f701; }
+  background: #5f7a73; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #8d1ffb; }
+  background: #0b1872; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #4a493d; }
+  background: #4a02a8; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #d0988a; }
+  background: #ce0ca1; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #4f0749; }
+  background: #719879; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ee6d34; }
+  background: #c75335; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #051980; }
+  background: #af5d35; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #c61314; }
+  background: #b5a13d; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #01adfc; }
+  background: #6b3c60; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #5c37c0; }
+  background: #fa3fda; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #96d0b0; }
+  background: #fc8cf6; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #c66d50; }
+  background: #facc80; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #ee2ea4; }
+  background: #f01d41; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e0410c; }
+  background: #760660; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #221ce0; }
+  background: #e70375; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #4aee7a; }
+  background: #294a46; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c996f5; }
+  background: #af870b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #7ae138; }
+  background: #35057c; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #684aef; }
+  background: #c28085; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #501972; }
+  background: #09aed7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #046b1c; }
+  background: #d5e84c; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8a166f; }
+  background: #952671; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #d515ba; }
+  background: #411ce4; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #cba252; }
+  background: #c77ee9; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #23d569; }
+  background: #b94ba7; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #dc0a0e; }
+  background: #f3e519; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #da2c4a; }
+  background: #aadb17; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #5c9ce5; }
+  background: #7c2fd3; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #8307bb; }
+  background: #458e75; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #191452; }
+  background: #9c9a82; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #9b079d; }
+  background: #5c85c4; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #7ab28a; }
+  background: #b6f2a4; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #5f6a3f; }
+  background: #f29ee6; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #b2d270; }
+  background: #78d645; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #e1c8d9; }
+  background: #6ff64b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #e2108d; }
+  background: #81e262; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #055665; }
+  background: #da611e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #e55297; }
+  background: #433223; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #090a3c; }
+  background: #9dbbb8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #c8f41b; }
+  background: #8963dc; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #57c64c; }
+  background: #723c02; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #5cd69b; }
+  background: #8cbf44; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #4894d6; }
+  background: #4d65fb; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #4c97a0; }
+  background: #d33da7; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #e3be17; }
+  background: #1a719f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #38c80a; }
+  background: #9204d4; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #43301d; }
+  background: #365e70; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f09aef; }
+  background: #b78e36; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #441a14; }
+  background: #434128; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #2217f0; }
+  background: #83ac49; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7617f7; }
+  background: #d361d5; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #72e5d8; }
+  background: #90fbdb; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #e3e1f2; }
+  background: #164c45; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #851657; }
+  background: #9e2387; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #dd4a46; }
+  background: #489d86; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #ad4a8b; }
+  background: #8d34f9; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #3d7fa9; }
+  background: #cf8663; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #60a1fb; }
+  background: #fe9d49; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #a078c2; }
+  background: #8ec53b; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #88f54d; }
+  background: #7852e4; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #2f9f88; }
+  background: #67ecf4; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #d762e5; }
+  background: #aee1d7; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #0ab1fc; }
+  background: #678757; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #79f132; }
+  background: #a17a8e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2ff6a0; }
+  background: #a5bab2; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #27c12e; }
+  background: #ea2675; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #01577c; }
+  background: #63748f; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #442796; }
+  background: #0a1211; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #a6adb4; }
+  background: #9a83fd; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #1360ec; }
+  background: #699f8f; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #781c9d; }
+  background: #0b9e55; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b9808e; }
+  background: #ee3910; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b2bdd8; }
+  background: #237ad7; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d82e16; }
+  background: #ed4170; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16910,6 +16910,9 @@ input:not(:checked) + .slider-switch > .switch-non {
   align-items: center;
   width: 100%; }
 
+.guide-img-border-div img {
+  width: 100%; }
+
 .guide-img-border-div .img-hieght-half {
   height: 50vh; }
 
@@ -16949,6 +16952,9 @@ input:not(:checked) + .slider-switch > .switch-non {
   font-weight: 600;
   color: #4C4C4C;
   text-decoration: none; }
+
+.left-guide-nav-div ul li a:hover {
+  color: #7b7b7b; }
 
 .left-guide-nav-div ul li ul {
   margin-left: 20px; }
